# crypto-utils

./: .vercelignore  README.md  build-vercel.sh  install.sh  setup.sh  vercel.json
decrypt/: aes.go  const.go  helper.go
encrypt/: aes.go  const.go  helper.go
frontend/: .gitignore  README.md  next.config.ts  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/gcs/upload/: route.ts
frontend/app/components/: CopyIconButton.tsx  EncryptDecryptFileForm.tsx  EncryptDecryptForm.tsx  GcsUploadForm.tsx  HashForm.tsx  HashResultRow.tsx  InputRow.tsx  ModeToggle.tsx
frontend/app/contexts/: WasmContext.tsx
frontend/app/utils/: wasm-loader.ts
wasm/: .gitignore  Cargo.toml  README.md  build.sh
wasm/src/: lib.rs
